WordOccurrenceCounter: Implement WordsReader

--- a/Task1/WordOccurrenceCounter.IntegrationTests/WordOccurrenceCounter.IntegrationTests.csproj
+++ b/Task1/WordOccurrenceCounter.IntegrationTests/WordOccurrenceCounter.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="NUnit" Version="3.14.0" />
@@ -18,7 +19,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WordOccurrenceCounter\WordOccurrenceCounter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestData\Oneliner1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Oneliner2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\OnelinerSpecial.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
